force-app/main/default/objects/BT_Registration__c/BT_Registration__c.object-meta.xml
<CustomObject>
    <label>BT Registration</label>
    <nameField>
        <displayFormat>TR-{00000000}</displayFormat>
        <label>Registration Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>