force-app/main/default/objects/BT_Registration__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <label>Additional Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>