force-app/main/default/objects/BT_Registration__c/fields/CanceledDate__c.field-meta.xml
<CustomField>
    <fullName>CanceledDate__c</fullName>
    <label>Canceled Date</label>
    <type>DateTime</type>
</CustomField>