force-app/main/default/objects/BT_Registration__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <formula>Schedule__r.Title__c</formula>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>