force-app/main/default/objects/BT_Registration__c/fields/ClassVenue__c.field-meta.xml
<CustomField>
    <fullName>ClassVenue__c</fullName>
    <formula>Schedule__r.Venue__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Venue</label>
    <type>Text</type>
</CustomField>