force-app/main/default/objects/BT_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Registration Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BT Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>