force-app/main/default/objects/BT_Registration__c/fields/InstructorName__c.field-meta.xml
<CustomField>
    <fullName>InstructorName__c</fullName>
    <formula>Schedule__r.Instructor__r.Contact__r.FirstName + Schedule__r.Instructor__r.Contact__r.LastName</formula>
    <label>Instructor Name</label>
    <type>Text</type>
</CustomField>