force-app/main/default/objects/BT_Registration__c/fields/IsClassActive__c.field-meta.xml
<CustomField>
    <fullName>IsClassActive__c</fullName>
    <formula>Schedule__r.IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Class Active</label>
    <type>Checkbox</type>
</CustomField>