force-app/main/default/objects/BT_Registration__c/fields/RegisteredDate__c.field-meta.xml
<CustomField>
    <fullName>RegisteredDate__c</fullName>
    <label>Registered Date</label>
    <type>DateTime</type>
</CustomField>