force-app/main/default/objects/BT_Registration__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <referenceTo>BT_Class__c</referenceTo>
    <relationshipName>Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>