force-app/main/default/objects/BT_Registration__c/fields/Starttime__c.field-meta.xml
<CustomField>
    <fullName>Starttime__c</fullName>
    <formula>Schedule__r.StartTime__c</formula>
    <label>Class Start time</label>
    <type>DateTime</type>
</CustomField>