force-app/main/default/objects/BT_Registration__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>