force-app/main/default/objects/BT_Registration__c/fields/SubscriptionRecordId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionRecordId__c</fullName>
    <formula>Subscription__r.Id</formula>
    <label>Subscription Record Id</label>
    <type>Text</type>
</CustomField>