force-app/main/default/objects/BT_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>ClassName__c</columns>
    <columns>Starttime__c</columns>
    <columns>ClassVenue__c</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>InstructorName__c</columns>
    <columns>Schedule__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>